G52-busca_paginada - fix: Inclusão do ajuste da busca com paginação